# Entropy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  meson.build
.github/workflows/: build.yml
asset_source/: background.aseprite  button.aseprite  pause_menu.aseprite  player.aseprite  snow_tile_1.aseprite
src/: game.cpp  game.h  main.cpp
src/characters/: player.cpp  player.h
src/emitter/: emitter.cpp  emitter.h
src/engine/: engine.cpp  engine.h
src/grid/: grid.cpp  grid.h
src/levels/: menu.cpp  menu.h  sandbox.cpp  sandbox.h
src/physics/: hitbox.cpp  hitbox.h  motion.cpp  motion.h
src/scene/: scene.h  scene_manager.cpp  scene_manager.h
src/texture/: sprite_sheet.cpp  sprite_sheet.h  texture.cpp  texture.h  texture_manager.cpp  texture_manager.h
src/textures/: texture.cpp  texture.h
src/time/: frame_manager.cpp  frame_manager.h  timer.cpp  timer.h
src/ui/: button.cpp  button.h
